fix:scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,24 @@ body {
   @apply bg-dark-background text-dark-text;
 }
 
+@layer utilities{
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    border-radius: 8px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    height: 56px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: #888;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+}
